# tola-backend-api

./: .gitignore  ChangeLog.md  Dockerfile  LICENSE  README.md  my-snapshot.yaml  package.yaml  readme-docker.md  sql-presistent.cabal  stack.yaml  submission-robot-hack.cabal  tola-backend-api-march.cabal.back  tola-backend-api.cabal
app/: Main.hs
src/: Dictionary.hs  Helpers.hs  Lib.hs  PersonUserName.hs  SeverityLevel.hs  Test.hs
src/Pixels/: Program.hs  Program.hs.back  Types.hs
src/Sam/: Robot.hs
src/Tola/: ChargeNotification.hs  ChargeRequest.hs  ChargeResponse.hs  Common.hs  DisbursementNotification.hs  DisbursementRequest.hs  Imports.hs  LodgementNotification.hs  LodgementRequest.hs  MonadTolaApi.hs  RealTolaApi.hs  TolaInterface.hs
src/Tola/Database/: Helpers.hs  Model.hs  MonadTolaDatabase.hs
src/Tola/Types/: ChargeRequest.hs  ChargeResponse.hs  Common.hs  DisbursementNotification.hs  LodgementNotification.hs
src/Web/: AppState.hs  Crypto.hs  JewlModel.hs  Localization.hs  Logger.hs  MockWebApp.hs  Model.hs  RealWebApp.hs  ScottyHelpers.hs  Visit.hs  WebM.hs
src/Web/Api/: ChargeRequestClientResponse.hs
src/Web/Apps/: HSpecMockWebApp.hs  MockWebApp.hs  RealWebApp.hs
src/Web/Logging/: DetailedLoggerMiddleware.hs  Logger.hs  MonadLogger.hs
src/Web/Security/: Base62.hs
src/Web/Testing/: Helpers.hs
src/Web/Types/: ChargeRequestClientResponse.hs  Logger.hs  State.hs  WebApp.hs  WebM.hs
src/Web/Utils/: DetailedLoggerMiddleware.hs  LogMiddleware.hs
test/: Spec.hs  Web.hs
