name:                sql-presistent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/homam/sql-presistent#readme
license:             BSD3
license-file:        LICENSE
author:              Homam
maintainer:          example@example.com
copyright:           2017 Homam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, SeverityLevel, Dictionary, Helpers, PersonUserName, Web.AppState, Web.Model, Web.WebM, Web.Visit
  build-depends:       base >= 4.7 && < 5
                     , persistent >= 2.7.0
                     , monad-logger
                     , persistent-postgresql >= 2.6.1
                     , persistent-template >= 2.5.1
                     , persistent-postgresql-json >= 0.1.1.0
                     , aeson
                     , aeson-pretty >= 0.8
                     , bytestring >= 0.10.8
                     , text
                     , transformers
                     , containers
                     , time
                     , http-types >= 0.9 && < 1.0
                     , scotty >= 0.11
                     , wai >= 3.2 && < 4
                     , wai-extra >= 3.0 && < 3.1
                     , mtl
                     , resource-pool
                     , monad-control
  default-language:    Haskell2010
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N

executable sql-presistent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sql-presistent
  default-language:    Haskell2010

test-suite sql-presistent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sql-presistent
                     , hspec >= 2.4
                     , HUnit >= 1.5
                     , hspec-wai >= 0.6.3
                     , persistent >= 2.7.0
                     , monad-logger
                     , persistent-postgresql >= 2.6.1
                     , persistent-template >= 2.5.1
                     , persistent-postgresql-json >= 0.1.1.0
                     , aeson
                     , aeson-pretty >= 0.8
                     , bytestring >= 0.10.8
                     , text
                     , transformers
                     , containers
                     , time
                     , http-types >= 0.9 && < 1.0
                     , scotty >= 0.11
                     , wai >= 3.2 && < 4
                     , wai-extra >= 3.0 && < 3.1
                     , mtl
                     , resource-pool
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/homam/sql-presistent
