name:                tola-backend-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/homam/tola-backend-api
license:             BSD3
license-file:        LICENSE
author:              Homam
maintainer:          example@example.com
copyright:           2017 Homam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Test
                     , Tola.Imports
                     , Tola.Common
                     , Tola.LodgementNotification
                     , Tola.DisbursementRequest
                     , Tola.ChargeRequest
                     , Tola.ChargeResponse
                     , Tola.ChargeNotification
                     , Tola.TolaInterface
                     , Web.JewlModel
                     , Web.Localization
                     , Web.Security.Base62
                     , Web.AppState, Web.Model, Web.WebM, Web.Visit
                     , Web.Api.ChargeRequestClientResponse
                     , Web.Utils.LogMiddleware
                     , Web.Utils.DetailedLoggerMiddleware
                     , Sam.Robot
  build-depends:       base >= 4.7 && < 5
                     , persistent >= 2.7.0
                     , monad-logger
                     , persistent-postgresql >= 2.6.1
                     , persistent-template >= 2.5.1
                     , aeson
                     , aeson-pretty >= 0.8
                     , bytestring >= 0.10.8
                     , text
                     , transformers
                     , containers
                     , http-types >= 0.9 && < 1.0
                     , scotty >= 0.11
                     , wai >= 3.2 && < 4
                     , wai-extra >= 3.0 && < 3.1
                     , mtl
                     , resource-pool
                     , monad-control
                     , utf8-string
                     , base64-bytestring
                     , time
                     , http-client >= 0.5.7 && < 0.6
                     , network-uri >= 2.6 && < 2.8
                     , hedis >= 0.9.9 && < 1.0.0
                     , unordered-containers >= 0.2.8 && < 0.3
                     , case-insensitive >= 1.2.0 && < 1.3
                     , http-client-tls
                     , http-conduit
                     , postgresql-simple
                     , uri-encode
                     , AES >= 0.2.9 && < 0.3
                     , cryptocipher
                     , cryptonite
                     , hspec >= 2.4
                     , HUnit >= 1.5
                     , hspec-wai >= 0.6.3
                     , hspec-expectations >= 0.8 && < 0.9
                     , Decimal >= 0.4 && <= 0.6
                     , cryptohash >= 0.11 && < 0.12
                     , base16-bytestring 
                     , QuickCheck
                     , fast-logger
                     , stm
                     , async
                     , blaze-builder
                     , ansi-terminal >= 0.6.3
                     , lifted-base >= 0.2.3
                     , data-default-class >= 0.1
                     , wai-logger >= 2.3.0
                     , vault >= 0.3.0.7
                     , exceptions >= 0.8.3 && < 0.9
  default-language:    Haskell2010
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N

executable tola-backend-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tola-backend-api
  default-language:    Haskell2010

test-suite tola-backend-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     Web
  build-depends:       base
                     , tola-backend-api
                     , hspec >= 2.4
                     , HUnit >= 1.5
                     , hspec-wai >= 0.6.3
                     , persistent >= 2.7.0
                     , monad-logger
                     , persistent-postgresql >= 2.6.1
                     , persistent-template >= 2.5.1
                     , persistent-postgresql-json >= 0.1.1.0
                     , aeson
                     , aeson-pretty >= 0.8
                     , bytestring >= 0.10.8
                     , text
                     , transformers
                     , containers
                     , time
                     , http-types >= 0.9 && < 1.0
                     , scotty >= 0.11
                     , wai >= 3.2 && < 4
                     , wai-extra >= 3.0 && < 3.1
                     , mtl
                     , resource-pool
                     , hedis >= 0.9.9 && < 1.0.0
                     , postgresql-simple
                     , hspec-expectations >= 0.8 && < 0.9
                     , QuickCheck
                     , derive
                     , case-insensitive >= 1.2.0 && < 1.3
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/homam/tola-backend-api
